# sp1-dkim

./: LICENSE  README.md
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: .gitignore  Cargo.toml  rust-toolchain
script/src/: main.rs
